--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
@@ -326,7 +326,7 @@
 												</div>
 											</div>
 											<div tabindex="45" class="tab-a2">
-												<div data-bind="ntsKMK003A2: {
+												<div class="tab-outline" data-bind="ntsKMK003A2: {
 													screenMode: screenMode,
 													tabMode: tabMode,
 													selectedTab: selectedTab,
@@ -337,12 +337,12 @@
 												</div>
 											</div>
 											<div tabindex="53" class="tab-a3">
-												<div data-bind="ntsKMK003A3: {enum: settingEnum, isDetailMode: isDetailMode,
+												<div class="tab-outline" data-bind="ntsKMK003A3: {enum: settingEnum, isDetailMode: isDetailMode,
 													useHalfDay: useHalfDay, mainModel: mainSettingModel, isLoading: isLoading}">
 												</div>
 											</div>
 											<div tabindex="60" class="tab-a4">
-												<div data-bind="ntsKMK003A4: { 
+												<div class="tab-outline" data-bind="ntsKMK003A4: { 
 													tabMode: tabMode, 
 													mainSettingModel: mainSettingModel,
 													enum: settingEnum,
@@ -350,18 +350,18 @@
 												</div>
 											</div>
 											<div tabindex="68" class="tab-a5">
-												<div data-bind="ntsKMK003A5: { isDetailMode: isDetailMode,
+												<div class="tab-outline" data-bind="ntsKMK003A5: { isDetailMode: isDetailMode,
 													useHalfDay: useHalfDay,
 													mainSettingModel: mainSettingModel }">
 												</div>
 											</div>
 											<div tabindex="88" class="tab-a6">
-												<div data-bind="ntsKMK003A6: {enum: settingEnum, 
+												<div class="tab-outline" data-bind="ntsKMK003A6: {enum: settingEnum, 
 													mainModel: mainSettingModel, isLoading: isLoading}">
 												</div>
 											</div>
 											<div tabindex="91" class="tab-a7">
-												<div data-bind="ntsKMK003A7: {
+												<div class="tab-outline" data-bind="ntsKMK003A7: {
 													tabMode: tabMode, 
 													mainSettingModel: mainSettingModel,
 													enum: settingEnum, 
@@ -371,7 +371,7 @@
 												</div>
 											</div>
 											<div tabindex="98" class="tab-a8">
-												<div data-bind="ntsKMK003A8: { 
+												<div class="tab-outline" data-bind="ntsKMK003A8: { 
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
@@ -379,7 +379,7 @@
 												</div>
 											</div>
 											<div tabindex="130" class="tab-a9">
-												<div data-bind="ntsKMK003A9: { 
+												<div class="tab-outline" data-bind="ntsKMK003A9: { 
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
@@ -387,7 +387,7 @@
 												</div>
 											</div>
 											<div tabindex="136" class="tab-a10">
-												<div data-bind="ntsKMK003A10: {
+												<div class="tab-outline" data-bind="ntsKMK003A10: {
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
@@ -395,7 +395,7 @@
 												</div>
 											</div>
 											<div tabindex="138" class="tab-a11">
-												<div data-bind="ntsKMK003A11: {
+												<div class="tab-outline" data-bind="ntsKMK003A11: {
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
@@ -403,7 +403,7 @@
 												</div>
 											</div>
 											<div tabindex="149" class="tab-a12">
-												<div data-bind="ntsKMK003A12: { 
+												<div class="tab-outline" data-bind="ntsKMK003A12: { 
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
@@ -411,7 +411,7 @@
 												</div>
 											</div>
 											<div tabindex="152" class="tab-a13">
-												<div data-bind="ntsKMK003A13: { 
+												<div class="tab-outline" data-bind="ntsKMK003A13: { 
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
@@ -419,7 +419,7 @@
 												</div>
 											</div>
 											<div tabindex="155" class="tab-a14">
-												<div data-bind="ntsKMK003A14: {
+												<div class="tab-outline" data-bind="ntsKMK003A14: {
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
@@ -427,7 +427,7 @@
 												</div>
 											</div>
 											<div tabindex="158" class="tab-a15">
-												<div data-bind="ntsKMK003A15: {
+												<div class="tab-outline" data-bind="ntsKMK003A15: {
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
@@ -435,7 +435,7 @@
 												</div>
 											</div>
 											<div tabindex="165" class="tab-a16">
-												<div data-bind="ntsKMK003A16: {
+												<div class="tab-outline" data-bind="ntsKMK003A16: {
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
