--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a14/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a14/index.xhtml
@@ -4,16 +4,16 @@
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 	
-	<div class="tab_14_setting_rows">
-		<div class="tab_14_setting_header" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_115')}</div>		
+	<div class="tab-rows">
+		<div style="width: 300px;" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_115')}</div>		
 	</div>
 	
-	<div style="width: 330px; margin-left: 20px;">		
+	<div style="width: 330px;">		
 		<hr/>
 	</div>
 	
-	<div class="tab_14_setting_rows">
-		<div class="tab_14_radio" tabindex="156" data-bind="ntsRadioBoxGroup: {
+	<div class="tab-rows">
+		<div class="tab-14-radio" tabindex="156" data-bind="ntsRadioBoxGroup: {
 				name: '#[KMK003_115]',
 				options: lstChildCareEnum,
 				optionsValue: 'value',
@@ -21,16 +21,16 @@
 				value: childCareWorkUse }"></div>
 	</div>
 	
-	<div class="tab_14_setting_rows">
-		<div class="tab_14_setting_header" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_189')}</div>		
+	<div class="tab-rows">
+		<div style="width: 300px;" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_189')}</div>		
 	</div>
 	
-	<div style="width: 330px; margin-left: 20px;">		
+	<div style="width: 330px;">		
 		<hr/>
 	</div>
 	
-	<div class="tab_14_setting_rows">
-		<div class="tab_14_radio" tabindex="157" data-bind="ntsRadioBoxGroup: {
+	<div class="tab-rows">
+		<div class="tab-14-radio" tabindex="157" data-bind="ntsRadioBoxGroup: {
 				name: '#[KMK003_189]',
 				options: lstNursingTimeEnum,
 				optionsValue: 'value',
