--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a15/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a15/index.xhtml
@@ -8,9 +8,9 @@
 		nts.uk.ctx.at.shared.dom.worktime.common.OneDayTime
    	</com:ValidatorScript>
 
-	<div class="tab_15_setting_rows">
-		<div class="tab_15_setting_header" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_118')}</div>
-		<div class="tab_15_inline_item" style="width: 100px;">
+	<div class="tab-rows">
+		<div style="width: 180px;" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_118')}</div>
+		<div class="tab-inline-item" style="width: 100px;">
 			<input tabindex="159" style="width: 60px;" data-bind="ntsTimeEditor: {
 					name: '#[KMK003_118]',					
 					value: dayShiftApplicationTime, 
@@ -20,9 +20,9 @@
 		</div>		
 	</div>
 	
-	<div class="tab_15_setting_rows">
-		<div class="tab_15_setting_header" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_119')}</div>
-		<div class="tab_15_inline_item" style="width: 100px;">
+	<div class="tab-rows">
+		<div style="width: 180px;" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_119')}</div>
+		<div class="tab-inline-item" style="width: 100px;">
 			<input tabindex="160" style="width: 60px;" data-bind="ntsTimeEditor: {
 					name: '#[KMK003_119]',		
 					value: nightShiftApplicationTime, 
@@ -32,9 +32,9 @@
 		</div>		
 	</div>
 	
-	<div class="tab_15_setting_rows">
-		<div class="tab_15_setting_header" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_120')}</div>
-		<div class="tab_15_inline_item" style="width: 100px;">
+	<div class="tab-rows">
+		<div style="width: 180px;" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_120')}</div>
+		<div class="tab-inline-item" style="width: 100px;">
 			<div tabindex="161" id="combo-box-leave-early-rounding-time" style="width: 100px;" data-bind="ntsComboBox: {
 					name: '#[KMK003_169]',
 					options: listRoundingTimeValue,
@@ -46,7 +46,7 @@
 					editable: false,
 					enable: true }"></div>
 		</div>				
-		<div class="tab_15_inline_item">
+		<div class="tab-inline-item">
 			<div tabindex="162" class="cf" data-bind="ntsSwitchButton: {
 					name: '#[KMK003_171]',
 					options: listRoundingValue,
@@ -56,9 +56,9 @@
 		</div>
 	</div>
 	
-	<div class="tab_15_setting_rows">
-		<div class="tab_15_setting_header" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_121')}</div>
-		<div class="tab_15_inline_item" style="width: 100px;">
+	<div class="tab-rows">
+		<div style="width: 180px;" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_121')}</div>
+		<div class="tab-inline-item" style="width: 100px;">
 			<div tabindex="163" id="combo-box-leave-early-rounding-time" style="width: 100px;" data-bind="ntsComboBox: {
 					name: '#[KMK003_169]',
 					options: listRoundingTimeValue,
@@ -70,7 +70,7 @@
 					editable: false,
 					enable: true }"></div>
 		</div>				
-		<div class="tab_15_inline_item">
+		<div class="tab-inline-item">
 			<div tabindex="164" class="cf" data-bind="ntsSwitchButton: {
 					name: '#[KMK003_171]',
 					options: listRoundingValue,
