--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a5/kmk003.a5.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a5/kmk003.a5.style.css
@@ -12,3 +12,11 @@
 .default-input-width input {
 	width: 80px;
 }
+
+.tab_5_checkbox {
+	padding: 20px 0px 10px 0px;
+}
+
+.tab_5_td_cell {
+	padding: 10px 0px 10px 0px;
+}
