--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a12/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a12/index.xhtml
@@ -4,17 +4,17 @@
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 	
-	<div class="tab_12_setting_rows">
-		<div class="tab_12_setting_header" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_110')}</div>		
+	<div class="tab-rows">
+		<div style="width: 300px;" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_110')}</div>		
 	</div>
 	
-	<div style="width: 330px; margin-left: 20px;">		
+	<div style="width: 330px;">		
 		<hr/>
 	</div>
 	
-	<div style="margin-left: 40px;">
-		<div class="tab_12_setting_rows">
-			<div class="tab_12_inline_item" style="width: 100px;">
+	<div class="tab-block">
+		<div class="tab-rows">
+			<div class="tab-inline-item" style="width: 100px;">
 				<div tabindex="150" id="combo-box-leave-early-rounding-time" style="width: 100px;" data-bind="ntsComboBox: {
 						name: '#[KMK003_169]',
 						options: listRoundingTimeValue,
@@ -26,7 +26,7 @@
 						editable: false,
 						enable: true }"></div>
 			</div>				
-			<div class="tab_12_inline_item">
+			<div class="tab-inline-item">
 				<div tabindex="151" class="cf" data-bind="ntsSwitchButton: {
 						name: '#[KMK003_171]',
 						options: listRoundingValue,
