--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a14/kmk003.a14.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a14/kmk003.a14.style.css
@@ -1,22 +1,5 @@
-.tab_14_setting_rows {
-	margin-top: 20px;
-	width: 100%;
-	display: flex;
-    align-items: center;
-}
-
-.tab_14_setting_header {
-	width: 300px;
-	margin-left: 20px;
-}
-
-.tab_14_inline_item {
-	padding: 0px 10px 0px 10px;
-	display: inline-block;
-}
-
-.tab_14_radio {
-	padding-left: 40px;
+.tab-14-radio {
+	padding-left: 20px;
 	width: 200px;
 }
 
