--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a16/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a16/index.xhtml
@@ -4,9 +4,9 @@
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-	<div class="tab_16_setting_rows">
-		<div class="tab_16_setting_header" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_122')}</div>			
-		<div class="tab_16_inline_item">
+	<div class="tab-rows">
+		<div style="width: 150px;" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_122')}</div>			
+		<div class="tab-inline-item">
 			<div tabindex="166" class="cf" data-bind="ntsSwitchButton: {
 				name: '#[KMK003_122]',
 				options: listZeroHStraddCalculateSetting,
