--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a2/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a2/index.xhtml
@@ -17,7 +17,7 @@
 					<label>#{i18n.getText('KMK003_51')}</label>
 				</h3>
 				<div class ="accordion-content">
-					<div id="fixtable-tab2-one-day" class="table-width" data-bind="ntsFixTableCustom: {
+					<div id="fixtable-tab2-one-day" class="tab-2-table-width" data-bind="ntsFixTableCustom: {
 							option: fixTableOptionOneDay}"></div>
 				</div>
 			</div>
@@ -25,21 +25,21 @@
 		
 		<com:ko tag="if" bind="isSimpleMode() &amp;&amp; !isFlowMode()">
 			<div tabindex="-1" class="accordion setting_detail_tab2">
-				<div id="fixtable-tab2-one-day-simple-mode" class="table-width" data-bind="ntsFixTableCustom: {
+				<div id="fixtable-tab2-one-day-simple-mode" class="tab-2-table-width" data-bind="ntsFixTableCustom: {
 						isEnableAllControl: isEnableTimeRangeOneDaySimpleMode,
 						option: fixTableOptionOneDaySimpleMode}"></div>
 			</div>
 		</com:ko>
 		
 		<!-- =================== Begin Use Half Day Shift And Detail mode =================== -->
-		<com:ko tag="if" bind="!isSimpleMode() &amp;&amp; isUseHalfDay()">
+		<com:ko tag="if" bind="!isSimpleMode() &amp;&amp; !isFlowMode() &amp;&amp; isUseHalfDay()">
 			<div tabindex="-1" class="accordion setting_detail_tab2"
 				data-bind="ntsAccordion: {enable: true}">
 				<h3>
 					<label>#{i18n.getText('KMK003_60')}</label>
 				</h3>
 				<div class ="accordion-content">
-					<div id="fixtable-tab2-morning-day" class="table-width" data-bind="ntsFixTableCustom: {
+					<div id="fixtable-tab2-morning-day" class="tab-2-table-width" data-bind="ntsFixTableCustom: {
 						option: fixTableOptionMorning}"></div>
 				</div>
 			</div>
@@ -49,7 +49,7 @@
 					<label>#{i18n.getText('KMK003_61')}</label>
 				</h3>
 				<div class ="accordion-content">
-					<div id="fixtable-tab2-afternoon" class="table-width"
+					<div id="fixtable-tab2-afternoon" class="tab-2-table-width"
 						data-bind="ntsFixTableCustom: {option: fixTableOptionAfternoon}"></div>
 				</div>
 			</div>
@@ -58,19 +58,19 @@
 	</div>
 
 
-
-
 	<!-- =================== Begin Flow Mode =================== -->
 	<com:ko tag="if" bind="isFlowMode">
 
 		<!-- BEGIN A18_13 ~ A18_18 -->
-		<div class="labelSetting">
+		<div class="tab-rows">
 			<div data-bind="ntsFormLabel: {required: false}">#{i18n.getText('KMK003_134')}</div>
 		</div>
+		
 		<div style="width: 50%">
-			<hr />
+			<hr/>
 		</div>
-		<div class="labelSetting itemleft" style="display: inline-flex;">
+		
+		<div class="tab-block" style="display: inline-flex;">
 			<div tabindex="49" style="margin-right: 10px;" data-bind="ntsComboBox: {
 						options: settingEnum.roundingTime,
 						optionsValue: 'value',
@@ -97,13 +97,15 @@
 		</div><!-- END A18_13 ~ A18_18 -->
 
 		<!-- BEGIN A18_19 ~ A18_23 -->
-		<div class="labelSetting">
+		<div class="tab-rows">
 			<div data-bind="ntsFormLabel: {required: false}">#{i18n.getText('KMK003_135')}</div>
 		</div>
+		
 		<div style="width: 50%">
-			<hr />
+			<hr/>
 		</div>
-		<div tabindex="51" class="itemleft" style="width: 300px;" data-bind="ntsRadioBoxGroup: {
+		
+		<div tabindex="51" class="tab-block" style="width: 300px;" data-bind="ntsRadioBoxGroup: {
 					options: calculationMethods,
 					optionsValue: 'code',
 					optionsText: 'name',
@@ -113,14 +115,15 @@
 
 		<!-- BEGIN A18_24 ~ A18_26 -->
 		<com:ko tag="if" bind="!isSimpleMode()">
-			<div class="labelSetting">
+			<div class="tab-rows">
 				<div data-bind="ntsFormLabel: {required: false}">#{i18n.getText('KMK003_138')}</div>
 			</div>
+			
 			<div style="width: 50%">
-				<hr />
+				<hr/>
 			</div>
-			<div tabindex="52" class="labelSetting, itemleft"
-				data-bind="ntsComboBox: {
+			
+			<div tabindex="52" class="tab-block" data-bind="ntsComboBox: {
 					options: settingEnum.lstFixedChangeAtr,
 					optionsValue: 'value',
 					visibleItemsCount: 3,
