--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a2/kmk003.a2.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a2/kmk003.a2.style.css
@@ -1,15 +1,7 @@
-.labelSetting {
-	margin-top: 20px;
-}
-
 .column-combo-box {
 	min-width: 70px !important;
 }
 
-.itemleft {
-	margin-left: 30px;
-}
-
-.table-width {
+.tab-2-table-width {
 	width: 486px;
 }
