--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a4/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a4/index.xhtml
@@ -10,20 +10,20 @@
    	
    	<!-- DETAIL MODE -->
 	<com:ko tag="if" bind="isDetailMode()">
-   	<div class="tab_4_setting_rows">
-		<div class="tab_4_setting_header" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_64')}</div>		
+   	<div class="tab-rows">
+		<div style="width: 180px;" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_64')}</div>		
 	</div>
 	
-	<div style="width: 380px; margin-left: 20px;">		
+	<div style="width: 380px;">		
 		<hr/>
 	</div>
 	
-	<div style="margin: 20px 40px 40px 40px;">	
-		<div class="tab_4_setting_rows">
-			<div class="tab_4_inline_item">
+	<div class="tab-block">	
+		<div class="tab-rows">
+			<div class="tab-inline-item">
 				<label>#{i18n.getText('KMK003_65')}</label>
 			</div>
-			<div class="tab_4_inline_item">
+			<div class="tab-inline-item">
 				<div tabindex="62" class="cf" data-bind="ntsSwitchButton: {
 						options: priorityOptions,
 						optionsValue: 'code',
@@ -33,11 +33,11 @@
 			</div>	
 		</div>	
 		
-		<div class="tab_4_setting_rows">
-			<div class="tab_4_inline_item">
+		<div class="tab-rows">
+			<div class="tab-inline-item">
 				<label>#{i18n.getText('KMK003_66')}</label>
 			</div>
-			<div class="tab_4_inline_item">
+			<div class="tab-inline-item">
 				<div tabindex="63" class="cf" data-bind="ntsSwitchButton: {
 						options: priorityOptions,
 						optionsValue: 'code',
@@ -49,21 +49,23 @@
 	</div>
 	</com:ko>
 	
+	<div class="tab-rows"></div>
+	
 	<!-- DETAIL + SIMPLE MODE -->
-	<div class="tab_4_setting_rows">
-		<div class="tab_4_setting_header" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_71')}</div>		
+	<div class="tab-rows">
+		<div style="width: 180px;" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_71')}</div>		
 	</div>
 	
-	<div style="width: 380px; margin-left: 20px;">		
+	<div style="width: 380px;">		
 		<hr/>
 	</div>
    	
-   	<div style="margin-left: 40px; margin-right: 40px; margin-top: 20px;">	
-		<div class="tab_4_setting_rows">
-			<div class="tab_4_inline_item">
+   	<div class="tab-block">	
+		<div class="tab-rows">
+			<div class="tab-inline-item">
 				<label>#{i18n.getText('KMK003_65')}</label>
 			</div>
-			<div class="tab_4_inline_item" style="width: 100px">
+			<div class="tab-inline-item" style="width: 100px">
 				<div tabindex="64" style="width: 100px;" data-bind="ntsComboBox: {
 						options: stampComboBoxOptions,
 						optionsValue: 'code',
@@ -73,7 +75,7 @@
 						editable: false,
 						enable: true }"></div>
 			</div>	
-			<div class="tab_4_inline_item">
+			<div class="tab-inline-item">
 				<div tabindex="65" class="cf" data-bind="ntsSwitchButton: {
 						options: stampRoundingOptions,
 						optionsValue: 'code',
@@ -83,11 +85,11 @@
 			</div>	
 		</div>	
 		
-		<div class="tab_4_setting_rows">
-			<div class="tab_4_inline_item">
+		<div class="tab-rows">
+			<div class="tab-inline-item">
 				<label>#{i18n.getText('KMK003_66')}</label>
 			</div>
-			<div class="tab_4_inline_item" style="width: 100px">
+			<div class="tab-inline-item" style="width: 100px">
 				<div tabindex="66" style="width: 100px;" data-bind="ntsComboBox: {
 						options: stampComboBoxOptions,
 						optionsValue: 'code',
@@ -97,7 +99,7 @@
 						editable: false,
 						enable: true }"></div>
 			</div>	
-			<div class="tab_4_inline_item">
+			<div class="tab-inline-item">
 				<div tabindex="67" class="cf" data-bind="ntsSwitchButton: {
 						options: stampRoundingOptions,
 						optionsValue: 'code',
