--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a9/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a9/index.xhtml
@@ -5,23 +5,23 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 	
 	<div style="text-align: right;">
-		<button tabindex="131" style="margin-right: 20px;">#{i18n.getText('KMK003_192')}</button>
+		<button tabindex="131">#{i18n.getText('KMK003_192')}</button>
 	</div>
 	
-	<div class="tab_9_setting_rows" style="margin-top: 0px;">
-		<div class="tab_9_setting_header" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_94')}</div>		
+	<div class="tab-rows" style="margin-top: 0px;">
+		<div style="width: 180px;" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_94')}</div>		
 	</div>
 	
-	<div style="margin-left: 20px; margin-right: 20px;">		
+	<div>		
 		<hr/>
 	</div>
 	
-	<div style="margin-left: 40px;">
-		<div class="tab_9_setting_rows">
-			<div class="tab_9_inline_item">
+	<div class="tab-block">
+		<div class="tab-rows">
+			<div class="tab-inline-item">
 				<label>#{i18n.getText('KMK003_95')}</label>
 			</div>
-			<div class="tab_9_inline_item" style="width: 100px;">
+			<div class="tab-inline-item" style="width: 100px;">
 				<div tabindex="132" id="combo-box-late-rounding-time" style="width: 100px;" data-bind="ntsComboBox: {
 						name: '#[KMK003_169]',
 						options: listRoundingTimeValue,
@@ -33,7 +33,7 @@
 						editable: false,
 						enable: true }"></div>
 			</div>				
-			<div class="tab_9_inline_item">
+			<div class="tab-inline-item">
 				<div tabindex="133" id="switch-button-late-rounding" class="cf" data-bind="ntsSwitchButton: {
 						name: '#[KMK003_171]',
 						options: listRoundingValue,
@@ -43,11 +43,11 @@
 			</div>
 		</div>
 		
-		<div class="tab_9_setting_rows">
-			<div class="tab_9_inline_item">
+		<div class="tab-rows">
+			<div class="tab-inline-item">
 				<label>#{i18n.getText('KMK003_96')}</label>
 			</div>
-			<div class="tab_9_inline_item" style="width: 100px;">
+			<div class="tab-inline-item" style="width: 100px;">
 				<div tabindex="134" id="combo-box-leave-early-rounding-time" style="width: 100px;" data-bind="ntsComboBox: {
 						name: '#[KMK003_169]',
 						options: listRoundingTimeValue,
@@ -59,7 +59,7 @@
 						editable: false,
 						enable: true }"></div>
 			</div>				
-			<div class="tab_9_inline_item">
+			<div class="tab-inline-item">
 				<div tabindex="135" id="switch-button-leave-early-rounding" class="cf" data-bind="ntsSwitchButton: {
 						name: '#[KMK003_171]',
 						options: listRoundingValue,
