--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/b/index.xhtml
@@ -5,7 +5,7 @@
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
-	<ui:composition template="../../../../master/noheader.xhtml">
+	<ui:composition template="../../../../master/freelayout.xhtml">
 		<ui:define name="htmlHead">
 			<com:stylefile path="ccg007.b.style.css" />
 			<com:scriptfile set="IGNITE" />
@@ -18,10 +18,6 @@
   			</com:ValidatorScript>
 		</ui:define>
 		<ui:define name="content">
-		<!-- TODO remove after kiban fix --> 
-		<div id="functions-area" class="divHeader">
-			</div>
-		<!-- ===== -->	
 			<div style="background-color: lightblue;" id="contents-area">
 				<div style="position: relative; top: 30%; margin: 0 auto auto 40%;">
 					<table>
