--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/b/index.xhtml
@@ -15,7 +15,8 @@
 		</div>
 		
 		<div id="scrB" class="contents-area">
-			<div id="tree-grid"></div>
+			<!-- B2_1 -->
+			<div tabindex="3" id="tree-grid"></div>
 			<div id="includeTableMonthlyDay" data-bind="with: commonTableMonthDaySet">
 				<ui:include src="../base.xhtml"/>
 			</div>
