--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/c/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/c/index.xhtml
@@ -15,8 +15,10 @@
 		</div>
 		
 		<div id="scrC" class="contents-area">
+			<!-- C4_1 -->
 			<div id="ccgcomponent"></div>
-			<div id="component-items-list"></div>
+			<!-- C2_1 -->
+			<div tabindex="3" id="component-items-list"></div>
 			<div id="includeTableMonthlyDay" data-bind="with: commonTableMonthDaySet">
 				<ui:include src="../base.xhtml"/>
 			</div>
