--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/d/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/d/index.xhtml
@@ -16,7 +16,8 @@
 		</div>
 		
 		<div id="scrD" class="contents-area">
-			<div id="empt-list-setting"></div>
+			<!-- D2_1 -->
+			<div tabindex="3" id="empt-list-setting"></div>
 			<div id="includeTableMonthlyDay" data-bind="with: commonTableMonthDaySet">
 				<ui:include src="../base.xhtml"/>
 			</div>
