--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/031/c/ccg031.c.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/031/c/ccg031.c.style.css
@@ -1,11 +1,9 @@
 @CHARSET "UTF-8";
 
 /* Override base */
-#header {display: none;}
-#functions-area-bottom {position:relative; height:45px;}
-
+.placement-wraper {height: 100%}
 .placement-container {overflow:auto;}
-.placement-container.overflow-y {overflow-y: auto;}
-.placement-container.overflow-x {overflow-x: auto; height: 485px;}
+.placement-container.overflow-y {overflow-y: auto;  margin-right:0px;}
+.placement-container.overflow-x {overflow-x: auto; height: 100%; margin-bottom:0px;}
 
 .btn-close {min-width: 85px;}
