--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/031/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/031/c/index.xhtml
@@ -6,9 +6,9 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
 
-	<ui:composition template="../../../../master/base.xhtml">
+	<ui:composition template="../../../../master/dialog.xhtml">
 		<ui:define name="htmlHead">
-			<script>var dialogSize = { width: 1000, height: 600 };</script>
+			<script>var dialogSize = { width: 1000, height: 610 };</script>
 			<com:scriptfile path="../../common/model.js" />
 			<com:scriptfile path="ccg031.c.vm.js" />
 			<com:scriptfile path="ccg031.c.start.js" />
@@ -17,7 +17,7 @@
 		</ui:define>
 
 		<ui:define name="content">
-			<div id="contents-area" class="cf">
+			<div id="contents-area">
 				<div class="placement-wraper">
 					<div class="placement-container overflow-x overflow-y">
 						<div class="widget-container">
