--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/031/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/031/b/index.xhtml
@@ -6,7 +6,7 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
 
-	<ui:composition template="../../../../master/base.xhtml">
+	<ui:composition template="../../../../master/dialog.xhtml">
 		<ui:define name="htmlHead">
 			<script>var dialogSize = { width: 710, height: 645 };</script>
 			<com:ValidatorScript>
