--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_commons.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_commons.scss
@@ -174,8 +174,7 @@ div.popup-panel {
 *****************************/
 #func-notifier-errors {
 	position: absolute;
-	display: inline-block;
-	visibility: hidden;
+	display: none;
 	z-index:10;
 	
 	@include border-radius(5px);
@@ -194,7 +193,7 @@ div.popup-panel {
 	}
 	
 	&.shown {
-		visibility: visible;
+		display: inline-block;
 	}
 }
 
